# 10_Animal_Classification

./: .gitignore  README.md  cloudbuild.yaml  cloudbuild_api.yaml  cloudbuild_evaluate.yaml  cloudbuild_train.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  sentiment_api.py  tasks.py
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
configs/: config.yaml  config_cpu.yaml  config_gpu.yaml  evaluate_configs.yaml  gcloudconfig.yaml  sweep.yaml  training_configs.yaml  vertex_ai_train.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
grp44-dtu-mlops/: .gitignore
grp44-dtu-mlops/myenv/: pyvenv.cfg
grp44-dtu-mlops/myenv/Scripts/: activate  activate.bat
notebooks/: eda.ipynb
reports/: README.md  report.html
src/: __init__.py
src/animal_classification/: HelloWorld.py  __init__.py  api.py  data.py  evaluate.py  model.py  monitoring.py  tb.py  train.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_api.py
tests/unittests/: test_model.py
wandb/: latest-run
wandb/run-20250120_112133-oioh8vj0/: run-oioh8vj0.wandb
wandb/run-20250120_112133-oioh8vj0/files/: wandb-metadata.json
wandb/run-20250120_113957-y4q02m5l/: run-y4q02m5l.wandb
wandb/run-20250120_113957-y4q02m5l/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250120_121855-944c6mxy/: run-944c6mxy.wandb
wandb/run-20250120_121855-944c6mxy/files/: config.yaml  (+2 more)
wandb/run-20250120_122714-frhye4vx/: run-frhye4vx.wandb
wandb/run-20250120_124859-559h992k/: run-559h992k.wandb
(+6 files in other folders)
