[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "animal_classification"
version = "0.0.1"
description = "banas"
authors = [
  { name = "group 44", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "animal_classification.train:main"
test = "animal_classification.evaluate:main"
